--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<textarea id="evaluatedText" name="message" onkeyup="countChars(this);"></textarea>
-<h3 id="letterCount">0</h3>
+	<textarea id="evaluatedText" name="message" onkeyup="countWords(this);"></textarea>
+<h3 id="wordCount">0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
 
