--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<textarea id="evaluatedText" name="message" onkeyup="countWords(this);"></textarea>
+	<textarea id="evaluatedText" name="message" onkeyup="wordCount();"></textarea>
 <h3 id="wordCount">0</h3>
     <script type="text/javascript" src="./script.js">
 </script>
